service-mesh/whereami-subset-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: whereami-vs
  namespace: whereami
spec:
  hosts:
  - "whereami.example.com"
  gateways:
  - asm-ingressgateway/asm-ingressgateway
  http:
  - route:
    - destination:
        host: whereami
        subset: v1
        port:
          number: 80
      weight: 50
    - destination:
        host: whereami
        subset: v2
        port:
          number: 80
      weight: 50
